# serde_bench

./: Cargo.toml
.github/workflows/: rust.yml
benches/: canada.rs
data/: LICENSE  canada.json  canada.postcard  canada.rmp  canada.rmpnamed  canada.ron  canada.toml  canada.yaml
json_de/base/: estimates.json  tukey.json
json_de/new/: benchmark.json  sample.json
json_de/report/: index.html
json_ser/base/: estimates.json  sample.json
json_ser/new/: benchmark.json  tukey.json
json_ser/report/: index.html
messagepack_de/base/: benchmark.json  sample.json
messagepack_de/new/: estimates.json  tukey.json
messagepack_de/report/: index.html
messagepack_named_de/base/: benchmark.json  estimates.json
messagepack_named_de/new/: sample.json  tukey.json
messagepack_named_de/report/: index.html
messagepack_named_ser/base/: estimates.json  tukey.json
messagepack_named_ser/new/: benchmark.json  sample.json
messagepack_named_ser/report/: index.html
messagepack_ser/base/: sample.json
messagepack_ser/new/: benchmark.json  estimates.json  tukey.json
messagepack_ser/report/: index.html
postcard_de/base/: sample.json  tukey.json
postcard_de/new/: benchmark.json  estimates.json
postcard_de/report/: index.html
postcard_ser/base/: benchmark.json  sample.json
postcard_ser/new/: estimates.json  tukey.json
postcard_ser/report/: index.html
report/: index.html
ron_de/base/: benchmark.json  tukey.json
ron_de/new/: estimates.json  sample.json
ron_de/report/: index.html
ron_ser/new/: benchmark.json  estimates.json  (+2 more)
src/: lib.rs  main.rs
(+21 files in other folders)
