[package]
name = "serde_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
toml = "0.7.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "canada"
harness = false
